Manifest version CSS rules (#1126)
* Add CSS rules for hiding content based on manifest version

* Organize other rules

--- a/ext/bg/css/settings2.css
+++ b/ext/bg/css/settings2.css
@@ -2439,17 +2439,20 @@ code.anki-field-marker {
 :root[data-browser=chrome] [data-show-for-browser]:not([data-show-for-browser~=chrome]),
 :root[data-browser=firefox] [data-show-for-browser]:not([data-show-for-browser~=firefox]),
 :root[data-browser=firefox-mobile] [data-show-for-browser]:not([data-show-for-browser~=firefox-mobile]),
+:root[data-browser=edge] [data-hide-for-browser~=edge],
+:root[data-browser=edge-legacy] [data-hide-for-browser~=edge-legacy],
+:root[data-browser=chrome] [data-hide-for-browser~=chrome],
+:root[data-browser=firefox] [data-hide-for-browser~=firefox],
+:root[data-browser=firefox-mobile] [data-hide-for-browser~=firefox-mobile] {
+    display: none;
+}
+
 :root[data-os=mac] [data-show-for-os]:not([data-show-for-os~=mac]),
 :root[data-os=win] [data-show-for-os]:not([data-show-for-os~=win]),
 :root[data-os=android] [data-show-for-os]:not([data-show-for-os~=android]),
 :root[data-os=cros] [data-show-for-os]:not([data-show-for-os~=cros]),
 :root[data-os=linux] [data-show-for-os]:not([data-show-for-os~=linux]),
 :root[data-os=openbsd] [data-show-for-os]:not([data-show-for-os~=openbsd]),
-:root[data-browser=edge] [data-hide-for-browser~=edge],
-:root[data-browser=edge-legacy] [data-hide-for-browser~=edge-legacy],
-:root[data-browser=chrome] [data-hide-for-browser~=chrome],
-:root[data-browser=firefox] [data-hide-for-browser~=firefox],
-:root[data-browser=firefox-mobile] [data-hide-for-browser~=firefox-mobile],
 :root[data-os=mac] [data-hide-for-os~=mac],
 :root[data-os=win] [data-hide-for-os~=win],
 :root[data-os=android] [data-hide-for-os~=android],
@@ -2459,6 +2462,12 @@ code.anki-field-marker {
     display: none;
 }
 
+:root[data-manifest-version='2'] [data-show-for-manifest-version]:not([data-show-for-manifest-version~='2']),
+:root[data-manifest-version='3'] [data-show-for-manifest-version]:not([data-show-for-manifest-version~='3']),
+:root[data-manifest-version='2'] [data-hide-for-manifest-version~='2'],
+:root[data-manifest-version='3'] [data-hide-for-manifest-version~='3'] {
+    display: none;
+}
 
 /* Media-specific styles */
 @media (max-width: 800px), (hover: none) and (max-width: 1100px) {
